@@ -1,3 +1,5 @@
+	* fix force-reannounce and tracker retry issue
+
 0.15.1 release
 
 	* fixed rare crash when purging the peer list
